--- a/react/src/index.css
+++ b/react/src/index.css
@@ -14,7 +14,10 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+.tachar{
+text-decoration: line-through;  
 
+}
 a {
   font-weight: 500;
   color: #646cff;
